tests/baselines/reference/jsExtendsImplicitAny.errors.txt
/b.js(1,17): error TS8026: Expected A<T> type arguments; provide these with an '@extends' tag.
/b.js(4,15): error TS2314: Generic type 'A<T>' requires 1 type argument(s).
/b.js(8,15): error TS2314: Generic type 'A<T>' requires 1 type argument(s).


==== /a.d.ts (0 errors) ====
    declare class A<T> { x: T; }
    
==== /b.js (3 errors) ====
    class B extends A {}
                    ~
!!! error TS8026: Expected A<T> type arguments; provide these with an '@extends' tag.
    new B().x;
    
    /** @augments A */
                  ~
!!! error TS2314: Generic type 'A<T>' requires 1 type argument(s).
    class C extends A { }
    new C().x;
    
    /** @augments A<number, number, number> */
                  ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2314: Generic type 'A<T>' requires 1 type argument(s).
    class D extends A {}
    new D().x;